[gd_scene load_steps=32 format=2]

[ext_resource path="res://entities/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/player/body/player_body.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/body/player_arm_left.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/body/player_arm_right.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/body/player_leg_left.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/body/player_leg_right.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/face/player_wick.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/face/player_idle_mouth.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/face/player_idle_eye_left.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/face/player_idle_eye_right.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/face/player_shooting_mouth.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/face/player_shooting_eye_left.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/face/player_shooting_eye_right.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/face/shoot/mouth.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/face/shoot/left_eye.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/face/shoot/right_eye.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/dust.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]

length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/RightArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -9.74157, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.2862, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Chest:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.40364, -5.34869 ), Vector2( -4.86415, -1.03269 ), Vector2( -5.40364, -5.34869 ), Vector2( -4.86415, -1.03269 ), Vector2( -5.40364, -5.34869 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/LeftLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.97916, 0.0, -8.97916, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RightLeg:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.44066, 0.0, 8.44066, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/RightLeg:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 36.4948, 59.4388 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/RightLeg:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/LeftLeg:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -44.0521, 60.0921 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body/LeftLeg:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.02983, 1.03395 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body/LeftArm:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -90.5279, 5.24803 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Body/LeftArm:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.915873, 0.93722 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Body/RightArm:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 78.6278, 5.21748 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Body/RightArm:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.945145, 0.912987 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Face:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.6862, 9.73203 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 77.2294, 5.51389 ), Vector2( 74.8981, -19.3213 ), Vector2( 81.9785, 27.2633 ), Vector2( 77.2294, 5.51389 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -11.2141, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/RightArm:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.12354, 1.04614 ), Vector2( 0.784876, 0.793365 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RightLeg:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 36.4948, 59.4388 ), Vector2( 43.0218, 64.4188 ), Vector2( 36.4948, 59.4388 ), Vector2( 36.4948, 59.4388 ), Vector2( 47.625, 58.9387 ), Vector2( 36.4948, 59.4388 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RightLeg:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -21.7928, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/RightLeg:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.829234, 0.738224 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.21544, 1.2438 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/LeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -81.4416, 5.12594 ), Vector2( -93.5501, 22.2819 ), Vector2( -87.8127, -10.0554 ), Vector2( -81.4416, 5.12594 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/LeftArm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.73717, 11.1169, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body/LeftArm:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.753957, 0.767475 ), Vector2( 1.06134, 1.08972 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body/LeftLeg:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -44.0521, 60.0921 ), Vector2( -54.3689, 58.7708 ), Vector2( -44.0521, 60.0921 ), Vector2( -44.0521, 60.0921 ), Vector2( -41.6015, 70.0071 ), Vector2( -44.0521, 60.0921 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Body/LeftLeg:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 19.8685, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Body/LeftLeg:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24435, 1.27815 ), Vector2( 1, 1 ), Vector2( 0.833232, 0.70173 ), Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Body/Chest:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.40364, -5.34869 ), Vector2( -4.20071, 3.14372 ), Vector2( -5.39356, -13.8397 ), Vector2( -5.40364, -5.34869 ), Vector2( -4.20071, 3.14372 ), Vector2( -5.40364, -5.34869 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Face:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.18787, 20.7846 ), Vector2( 0.546966, -13.9476 ), Vector2( 2.46135, 25.844 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "hurt"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Mouth:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/LeftEye:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Face/RightEye:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Face/Mouth:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -11.5349, 31.5935 ), Vector2( -6.41597, 25.4508 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Face/Wick:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3.72146, -81.2018 ), Vector2( -6.04842, -68.5787 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Face/Wick:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -49.6692, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Face/Wick:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.01709, 1.03236 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Wick:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -15.2088 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Wick:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.06152, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Face/RightEye:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), null, ExtResource( 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Face/LeftEye:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), null, ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Mouth:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/LeftEye:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 16 ), ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Face/RightEye:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 17 ), ExtResource( 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Face/Mouth:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.41597, 25.4508 ), Vector2( -9.2, 22.8378 ), Vector2( -6.41597, 25.4508 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Face/Wick:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6.04842, -68.5787 ), Vector2( -3.72146, -81.2018 ), Vector2( -6.04842, -68.5787 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Face/Wick:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -49.6692, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Face/Wick:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01709, 1.03236 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Face/LeftEye:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.902107, 0.935553 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 89.8103

[sub_resource type="Curve" id=7]

min_value = -360.0
max_value = 360.0
bake_resolution = 100
_data = [ Vector2( 0, 7.21124 ), 0.0, 0.0, 0, 0, Vector2( 0.997667, -95.8065 ), 232.399, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 2048
curve = SubResource( 7 )

[sub_resource type="Gradient" id=9]

offsets = PoolRealArray( 0.524887, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]

flags = 4
gradient = SubResource( 9 )
width = 2048

[sub_resource type="Curve" id=11]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5186 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]

flags = 4
width = 2048
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]

render_priority = 0
trail_divisor = 2
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 2.75506e-39
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 1.0
angle_curve = SubResource( 8 )
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Color", "Gravity", "Scale" ]

[node name="Player" type="KinematicBody2D" index="0"]

position = Vector2( 4.05205, -0.0920916 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 4
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Transform", "Z Index", "collision" ]
SPEED = 600
Bullet = ExtResource( 2 )
MAX_HP = 3

[node name="FireRate" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="Body" type="Node2D" parent="." index="1"]

rotation = -0.00118727

[node name="Chest" type="Sprite" parent="Body" index="0"]

position = Vector2( -5.40364, -5.34869 )
texture = ExtResource( 3 )
offset = Vector2( 5.40364, 5.34869 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="LeftArm" type="Sprite" parent="Body" index="1"]

position = Vector2( -90.5279, 5.24803 )
scale = Vector2( 0.915873, 0.93722 )
texture = ExtResource( 4 )
offset = Vector2( 81.4416, -5.12594 )
_sections_unfolded = [ "Transform" ]

[node name="RightArm" type="Sprite" parent="Body" index="2"]

position = Vector2( 78.6278, 5.21748 )
scale = Vector2( 0.945145, 0.912987 )
texture = ExtResource( 5 )
offset = Vector2( -77.2294, -5.51389 )
_sections_unfolded = [ "Transform" ]

[node name="LeftLeg" type="Sprite" parent="Body" index="3"]

position = Vector2( -44.0521, 60.0921 )
scale = Vector2( 1.02983, 1.03395 )
texture = ExtResource( 6 )
offset = Vector2( 46.5262, -57.1111 )
_sections_unfolded = [ "Transform" ]

[node name="RightLeg" type="Sprite" parent="Body" index="4"]

position = Vector2( 36.4948, 59.4388 )
texture = ExtResource( 7 )
offset = Vector2( -36.4948, -59.4388 )
_sections_unfolded = [ "Transform" ]

[node name="BodyAnimator" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
anims/moving = SubResource( 2 )
blend_times = [  ]

[node name="Face" type="Node2D" parent="." index="3"]

position = Vector2( 1.6862, 9.73203 )

[node name="Wick" type="Sprite" parent="Face" index="0"]

position = Vector2( -6.04842, -68.5787 )
texture = ExtResource( 8 )
offset = Vector2( 13.1626, 66.6446 )
_sections_unfolded = [ "Transform" ]

[node name="Mouth" type="Sprite" parent="Face" index="1"]

position = Vector2( -6.41597, 25.4508 )
texture = ExtResource( 9 )
offset = Vector2( 6.95546, -24.9113 )

[node name="LeftEye" type="Sprite" parent="Face" index="2"]

position = Vector2( -37.419, -29.8282 )
texture = ExtResource( 10 )
offset = Vector2( 34.8878, 33.281 )

[node name="RightEye" type="Sprite" parent="Face" index="3"]

position = Vector2( 13.9938, -31.3413 )
texture = ExtResource( 11 )
offset = Vector2( -13.9938, 35.2207 )

[node name="FaceAnimator" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/shooting = SubResource( 5 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="5"]

visible = false
position = Vector2( -6.57053, -8.95982 )
shape = SubResource( 6 )

[node name="Trail" type="Particles2D" parent="." index="6"]

show_behind_parent = true
position = Vector2( -8.15862, -1.20722 )
emitting = true
amount = 3
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = ExtResource( 18 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="HurtBlink" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[connection signal="animation_finished" from="FaceAnimator" to="." method="_on_FaceAnimator_animation_finished"]

[connection signal="timeout" from="HurtBlink" to="." method="_on_HurtBlink_timeout"]


